Fix: not visible footer copyright

--- a/assets/style.css
+++ b/assets/style.css
@@ -156,12 +156,6 @@ div .card {
     margin-top: auto;
 }
 
-.footerCopyright {
-    position: absolute;
-    bottom: 0;
-    margin: 0 !important;
-}
-
 #footer i {
     font-size: 40px;
     margin: 9px;
